[package]
name = "howudoin"
version = "0.1.1"
authors = ["Kurt Lawrence <https://kurtlawrence.info>"]
edition = "2021"
description = "Progress reporting abstraction"
repository = "https://github.com/kdr-aus/how-u-doin"
license = "MIT"
keywords = ["progress", "tui", "abstraction"]
categories = ["gui"]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
term-line = ["dep:indicatif"]
json-printer = ["serde", "dep:serde_json"]

[dependencies]
flume = "0.10"
indicatif = { version = "0.17", optional = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
